--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -3,13 +3,13 @@
 &-nav {
 	margin-bottom: 25px;
 		
-		@media #{$brk-narrow} {
+		@include tablet {
 			width: 40%;
 			margin: 0 auto;
 	
 	}
 	
-	@media #{$brk-wide} {
+	@include desktop {
 				width: 30%;
 			margin: 0;
 	}
@@ -19,13 +19,13 @@
 &-nav ul {
 	padding: 0;
 	
-	@media #{$brk-narrow} {
+	@include tablet {
 			display: flex;
 			justify-content: space-around;
 	
 	}
 
-	@media #{$brk-wide} {
+	@include desktop {
 			justify-content: space-between;
 			align-items: center;
 	}
@@ -37,7 +37,7 @@
 	background: #fff;
 	margin: 5px 0;
 	
-	@media #{$brk-narrow} {
+	@include tablet {
 			background: #fafafa;
 	
 	}
@@ -50,10 +50,10 @@
 
 
 #about {
-	color: #7f7f7f;
+	color: $grey;
 	padding: 2% 5%;
 	
-	@media #{$brk-narrow} {
+	@include tablet {
 			display: flex;
 			padding: 35px 3%;
 			justify-content: space-between;
@@ -62,7 +62,7 @@
 }
 
 .profileimg {
-	@media #{$brk-narrow} {
+	@include tablet {
 		padding-left: 2%;
 		order: 2;
 		width: 40%;
@@ -81,7 +81,7 @@
 	padding: 0 5%;
 	overflow: hidden;
 	
-	@media #{$brk-narrow} {
+	@include tablet {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
@@ -92,24 +92,24 @@
 
 .project {
 	margin-bottom: 30px;
-	@media #{$brk-narrow} {
+	@include tablet {
 	width: 49%;
 }
 
-@media #{$brk-wide} {
+@include desktop {
 	width: 32%;
 }
 }
 
 .back-to-top {
-	@media #{$brk-narrow} {
+	@include tablet {
 		display:none
 	}
 }
 
 #contact {
 	padding: 0 5%;
-		@media #{$brk-narrow} {
+		@include tablet {
 			width: 70%;
 		margin: 0 auto;
 		padding: 20px 5%;
@@ -119,13 +119,13 @@
 
 .bottom-nav {
 	display: none;
-	@media #{$brk-narrow} {
+	@include tablet {
 	display: flex;
 		justify-content: space-between;
 		width: 40%;
-		font-size: 0.813em; /* 13px */
+		font-size: $secondary-font-size; /* 13px */
 	}
-	@media #{$brk-wide} {
+	@include desktop {
 		width: 30%;
 	}
 }
